--- a/src/main/resources/calculator_view.fxml
+++ b/src/main/resources/calculator_view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.AmbientLight?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,10 +11,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="355.0" prefWidth="250.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="385.0" prefWidth="250.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalculatorController">
    <children>
-      <GridPane layoutX="15.0" layoutY="77.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="220.0">
+      <GridPane layoutX="15.0" layoutY="107.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="220.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,7 +27,7 @@
             <RowConstraints maxHeight="197.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="1">
+            <Button maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="1">
                <font>
                   <Font size="26.0" />
                </font>
@@ -34,7 +35,7 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="3" GridPane.columnIndex="2">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="3" GridPane.columnIndex="2">
                <font>
                   <Font size="26.0" />
                </font>
@@ -42,7 +43,7 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" minWidth="20.0" mnemonicParsing="false" text="2" GridPane.columnIndex="1">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" minWidth="20.0" mnemonicParsing="false" onAction="#Number" text="2" GridPane.columnIndex="1">
                <font>
                   <Font size="26.0" />
                </font>
@@ -50,7 +51,7 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="4" GridPane.rowIndex="1">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="4" GridPane.rowIndex="1">
                <font>
                   <Font size="26.0" />
                </font>
@@ -58,7 +59,7 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="10.0" layoutY="84.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button layoutX="10.0" layoutY="84.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="26.0" />
                </font>
@@ -66,7 +67,7 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="72.0" layoutY="84.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button layoutX="72.0" layoutY="84.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font size="26.0" />
                </font>
@@ -74,45 +75,37 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="7" GridPane.rowIndex="2">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="7" GridPane.rowIndex="2">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="72.0" layoutY="138.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button layoutX="72.0" layoutY="138.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="0" GridPane.rowIndex="3">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#Number" text="0" GridPane.rowIndex="3">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="C" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#clear" prefHeight="50.0" prefWidth="50.0" text="C" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#calculate" prefHeight="50.0" prefWidth="50.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="+" GridPane.columnIndex="3">
-               <font>
-                  <Font size="26.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="2.0" />
-               </GridPane.margin>
-            </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="−" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Button fx:id="addButton" layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#operation" prefHeight="50.0" prefWidth="50.0" text="+" GridPane.columnIndex="3">
                <font>
                   <Font size="26.0" />
                </font>
@@ -120,18 +113,50 @@
                   <Insets left="2.0" />
                </GridPane.margin>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Button fx:id="subtractButton" layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#operation" text="−" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="2.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="multiplyButton" layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#operation" text="×" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
-            <Button layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="×" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <Button fx:id="divideButton" layoutX="16.0" layoutY="20.0" maxHeight="50.0" maxWidth="50.0" mnemonicParsing="false" onAction="#operation" prefHeight="50.0" prefWidth="50.0" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
                   <Font size="26.0" />
                </font>
             </Button>
          </children>
       </GridPane>
-      <TextField layoutX="17.0" layoutY="21.0" prefHeight="50.0" prefWidth="216.0" />
+      <TextField fx:id="resultField" layoutX="17.0" layoutY="54.0" prefHeight="39.0" prefWidth="216.0" style="-fx-background-color: pink;" AnchorPane.bottomAnchor="279.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="54.0">
+         <font>
+            <Font size="28.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <cursor>
+            <Cursor fx:constant="CLOSED_HAND" />
+         </cursor>
+         <padding>
+            <Insets left="9.0" />
+         </padding></TextField>
+      <AmbientLight color="CHARTREUSE" lightOn="true" />
+      <TextField fx:id="calculationField" layoutX="17.0" layoutY="13.0" prefHeight="37.0" prefWidth="216.0" style="-fx-background-color: pink; -fx-font-style: red;">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets left="9.0" />
+         </padding>
+      </TextField>
    </children>
 </AnchorPane>
